# Morris

./: .gitignore  README.md  lib_to_ui.cmd  lib_to_ui.py
morris/: CMakeLists.txt
morris/src/: main.cpp  pch.hpp
morris/src/algorithms/: mcts.hpp  min_max.hpp  random_play.hpp
morris/src/games/: connect_4.cpp  connect_4.hpp  nine_men_morris.cpp  nine_men_morris.hpp  simulation.hpp  tic_tac_toe.cpp  tic_tac_toe.hpp
morris_ui/: .gitignore  binding.gyp  build.cmd  index.html  main.js  package-lock.json  package.cmd  package.json
morris_ui/cpp_addons/src/: addon.cc  example.cc  example.h  napi_helper.h  simulation.cc  simulation.h
morris_ui/src/css/: style.css
morris_ui/src/js/: App.js  D3Container.js  nine_men_morris_ui.js
